--- a/settings.properties
+++ b/settings.properties
@@ -1,8 +1,8 @@
 # Dein Gruppenname, z.B dbp001
-gruppenname=dbp032
-# Das dazugehörige Passwort
-passwort=yee7miey
-# Name des Rechners im DB-Pool, eine Liste von Rechnernamen ist außerdem auf der Vorlesungsseite verlinkt.
+gruppenname=dbp***
+# Das dazugehÃ¶rige Passwort
+passwort=********
+# Name des Rechners im DB-Pool, eine Liste von Rechnernamen ist auÃŸerdem auf der Vorlesungsseite verlinkt.
 rechnername=metis
 # Die Datenbank, z.B. funder
 database=funder
